first index of repos

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" text="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" text="text/css" href="./assets/css/style.css">
-    <title>JDahle Live!</title>
+    <title>J M Dahle Live!</title>
 </head>
 <body>
-    Live webpage
+    <h1>Live Repositories</h1>>
+    <ul>
+        <li>
+            <strong>My Portfolio - </strong>
+            An early exercise in separating markup from styling and working on CSS layout and positioning.
+        </li>
+    </ul>
 </body>
 </html>
