first index of repos

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" text="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" text="text/css" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <title>J M Dahle Live!</title>
 </head>
 <body>
-    <h1>Live Repositories</h1>>
+    <h1>Live Repositories</h1>
     <ul>
         <li>
-            <strong>My Portfolio - </strong>
+            <a href="./Basic-Portfolio/">My Basic-Portfolio</a>&nbsp;-&nbsp;
             An early exercise in separating markup from styling and working on CSS layout and positioning.
         </li>
     </ul>
