--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <title>J M Dahle Live!</title>
 </head>
 <body>
-    <h1>Live Repositories</h1>
-    <ul>
-        <li>
-            <a href="./Basic-Portfolio/">My Basic-Portfolio</a>&nbsp;-&nbsp;
-            An early exercise in separating markup from styling and working on CSS layout and positioning.
-        </li>
-    </ul>
+    <div id="body-wrapper">
+        <h1>Live Repositories</h1>
+        <ul>
+            <li>
+                <a href="./Basic-Portfolio/">My Basic-Portfolio</a>&nbsp;-&nbsp;
+                An early exercise in separating markup from styling and working on CSS layout and positioning.
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
