--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" text="text/css" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>J M Dahle Live!</title>
 </head>
 <body>
+    <div class="container">
     <div id="body-wrapper">
         <h1>Live Repositories</h1>
         <ul>
@@ -19,6 +21,7 @@
                 An early exercise in separating markup from styling and working on CSS layout and positioning.
             </li>
         </ul>
+    </div>
     </div>
 </body>
 </html>
