updated to Bootstrap and added second project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,20 +9,50 @@
     <link rel="stylesheet" text="text/css" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>J M Dahle Live!</title>
 </head>
+
 <body>
-    <div class="container">
-    <div id="body-wrapper">
+    <div class="container mainbody">
         <h1>Live Repositories</h1>
-        <ul>
-            <li>
-                <a href="./Basic-Portfolio/">My Basic-Portfolio</a>&nbsp;-&nbsp;
-                An early exercise in separating markup from styling and working on CSS layout and positioning.
-            </li>
-        </ul>
+        <!-- #1 Project -->
+        <div class="media">
+            <img src="./assets/images/Basic-Portfolio-thumb.png" class="mr-3" alt="Basic-Portfolio">
+            <div class="media-body">
+                <h5 class="mt-0">
+                    <span class="badge badge-primary">New</span>
+                    Basic-Portfolio
+                    <a class="d-inline-flex nav-link" href="./Basic-Portfolio/index.html">Link</a>
+                </h5>
+                An early exercise in separating markup from styling and working on CSS layout and positioning. Initially
+                completed 2019-04-27.
+            </div>
+        </div>
+        <!-- #2 Project -->
+        <div class="media">
+            <img src="./assets/images/Basic-Portfolio-thumb.png" class="mr-3" alt="Bootstrap-Portfolio">
+            <div class="media-body">
+                <h5 class="mt-0">
+                    <span class="badge badge-warning">Incomplete</span>
+                    Bootstrap-Portfolio
+                    <a class="d-inline-flex nav-link" href="./Bootstrap-Portfolio/index.html">Link</a>
+                </h5>
+                Repeating the Basic-Portfolio exercise using Bootstrap, resulting in a responsive page.
+            </div>
+        </div>
     </div>
-    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
