added some styling and image for second project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Live Repositories</h1>
         <!-- #1 Project -->
         <div class="media">
-            <img src="./assets/images/Basic-Portfolio-thumb.png" class="mr-3" alt="Basic-Portfolio">
+            <img src="./assets/images/Basic-Portfolio-thumb.png" class="mr-3 border" alt="Basic-Portfolio">
             <div class="media-body">
                 <h5 class="mt-0">
                     <span class="badge badge-primary">New</span>
@@ -33,7 +33,7 @@
         <hr>
         <!-- #2 Project -->
         <div class="media">
-            <img src="./assets/images/Basic-Portfolio-thumb.png" class="mr-3" alt="Bootstrap-Portfolio">
+            <img src="./assets/images/Bootstrap-Portfolio-thumb.png" class="mr-3 border" alt="Bootstrap-Portfolio">
             <div class="media-body">
                 <h5 class="mt-0">
                     <span class="badge badge-warning">Incomplete</span>
