--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h5 class="mt-0">
                     <span class="badge badge-primary">New</span>
                     Basic-Portfolio
-                    <a class="d-inline-flex nav-link" href="./Basic-Portfolio/index.html">Link</a>
+                    <a class="d-inline-flex nav-link text-secondary" href="./Basic-Portfolio/index.html">Link</a>
                 </h5>
                 An early exercise in separating markup from styling and working on CSS layout and positioning. Initially
                 completed 2019-04-27.
@@ -38,7 +38,7 @@
                 <h5 class="mt-0">
                     <span class="badge badge-warning">Incomplete</span>
                     Bootstrap-Portfolio
-                    <a class="d-inline-flex nav-link" href="./Bootstrap-Portfolio/index.html">Link</a>
+                    <a class="d-inline-flex nav-link text-secondary" href="./Bootstrap-Portfolio/index.html">Link</a>
                 </h5>
                 Repeating the Basic-Portfolio exercise using Bootstrap, resulting in a responsive page.
             </div>
