--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
                 Repeating the Basic-Portfolio exercise using Bootstrap, resulting in a responsive page.
             </div>
         </div>
+        <hr>
+        <!-- #3 Project -->
+        <div class="media">
+            <img src="./assets/images/Responsive-Portfolio-thumb.png" class="mr-3 border" alt="Responsive-Portfolio">
+                <div class="media-body">
+                    <h5 class="mt-0">
+                        <span class="badge badge-warning">Incomplete</span>
+                        Respopnsive-Portfolio
+                        <a class="d-inline-flex nav-link text-secondary" href="./Responsive-Portfolio/index.html">Link</a>
+                    </h5>
+                    Repeating the Basic-Portfolio exercise using @media CSS to create a responsive page.
+                </div>
+            </div>
+        </div>    
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
