--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="media-body">
                     <h5 class="mt-0">
                         <span class="badge badge-warning">Incomplete</span>
-                        Respopnsive-Portfolio
+                        Responsive-Portfolio
                         <a class="d-inline-flex nav-link text-secondary" href="./Responsive-Portfolio/index.html">Link</a>
                     </h5>
                     Repeating the Basic-Portfolio exercise using @media CSS to create a responsive page.
