--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-md-7">
                     <h5 class="mt-0">
-                        <span class="badge badge-primary">New</span>
+                        <span class="badge badge-success">New</span>
                         Bootstrap-Portfolio
                         <a class="d-inline-flex nav-link text-primary"
                             href="./Bootstrap-Portfolio/index.html">Link</a>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-md-7">
                     <h5 class="mt-0">
-                        <span class="badge badge-primary">New</span>
+                        <span class="badge badge-success">Complete</span>
                         Responsive-Portfolio
                         <a class="d-inline-flex nav-link text-primary"
                             href="./Responsive-Portfolio/index.html">Link</a>
@@ -105,13 +105,13 @@
             <!-- #4 Project -->
             <div class="row">
                 <div class="col-md-5">
-                    <img src="http:/lorempixel.com/300/300" class="mr-3 border" alt="Project Image">
+                    <img src="./assets/images/Word-Guess-Game.png" class="mr-3 border" alt="Project Image">
                 </div>
                 <div class="col-md-7">
                     <h5 class="mt-0">
                         <span class="badge badge-warning">Incomplete</span>
                         Word Game - Hangman!
-                        <a class="d-inline-flex nav-link text-primary" href="#">Link</a>
+                        <a class="d-inline-flex nav-link text-primary" href="./Word-Guess-Game/index.html">Link</a>
                     </h5>
                     A hangman-style word game incorporating javascript.
                 </div>
