--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-md-7">
                     <h5 class="mt-0">
-                        <span class="badge badge-success">New</span>
+                        <span class="badge badge-success">Complete</span>
                         Bootstrap-Portfolio
                         <a class="d-inline-flex nav-link text-primary"
                             href="./Bootstrap-Portfolio/index.html">Link</a>
