added HW 4 to portfolio

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                 </div>
                 <div class="col-md-7">
                     <h5 class="mt-0">
-                        <span class="badge badge-warning">Incomplete</span>
+                        <span class="badge badge-primary">New</span>
                         Word Game - Hangman!
                         <a class="d-inline-flex nav-link text-primary" href="./Word-Guess-Game/index.html">Link</a>
                     </h5>
-                    A hangman-style word game incorporating javascript.
+                    A gothic-horror-themed hangman-style word game incorporating basic javascript and utilizing a single object for the game functionality.
                 </div>
             </div>
             <hr>
