--- a/index.html
+++ b/index.html
@@ -51,6 +51,55 @@
     <main>
         <div class="container">
             <h1>Live Repositories</h1>
+            <!-- #4 Project -->
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="./assets/images/Word-Guess-Game.png" class="mr-3 border" alt="Project Image">
+                </div>
+                <div class="col-md-7">
+                    <h5 class="mt-0">
+                        <span class="badge badge-primary">New</span>
+                        Word Game - Hangman!
+                        <a class="d-inline-flex nav-link text-primary" href="./Word-Guess-Game/index.html">Link</a>
+                    </h5>
+                    A gothic-horror-themed hangman-style word game incorporating basic javascript and utilizing a single
+                    object for the game functionality.
+                </div>
+            </div>
+            <hr>
+            <!-- #3 Project -->
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="./assets/images/Responsive-Portfolio-thumb.png" class="mr-3 border"
+                        alt="Responsive-Portfolio">
+                </div>
+                <div class="col-md-7">
+                    <h5 class="mt-0">
+                        <span class="badge badge-success">Complete</span>
+                        Responsive-Portfolio
+                        <a class="d-inline-flex nav-link text-primary" href="./Responsive-Portfolio/index.html">Link</a>
+                    </h5>
+                    Repeating the Basic-Portfolio exercise using @media CSS to create a responsive page.
+                </div>
+            </div>
+            <hr>
+
+            <!-- #2 Project -->
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="./assets/images/Bootstrap-Portfolio-thumb.png" class="mr-3 border"
+                        alt="Bootstrap-Portfolio">
+                </div>
+                <div class="col-md-7">
+                    <h5 class="mt-0">
+                        <span class="badge badge-success">Complete</span>
+                        Bootstrap-Portfolio
+                        <a class="d-inline-flex nav-link text-primary" href="./Bootstrap-Portfolio/index.html">Link</a>
+                    </h5>
+                    Repeating the Basic-Portfolio exercise using Bootstrap, resulting in a responsive page.
+                </div>
+            </div>
+            <hr>
             <!-- #1 Project -->
             <div class="row">
                 <div class="col-md-5">
@@ -65,55 +114,6 @@
                     An early exercise in separating markup from styling and working on CSS layout and positioning.
                     Initially
                     completed 2019-04-27.
-                </div>
-            </div>
-            <hr>
-            <!-- #2 Project -->
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="./assets/images/Bootstrap-Portfolio-thumb.png" class="mr-3 border"
-                        alt="Bootstrap-Portfolio">
-                </div>
-                <div class="col-md-7">
-                    <h5 class="mt-0">
-                        <span class="badge badge-success">Complete</span>
-                        Bootstrap-Portfolio
-                        <a class="d-inline-flex nav-link text-primary"
-                            href="./Bootstrap-Portfolio/index.html">Link</a>
-                    </h5>
-                    Repeating the Basic-Portfolio exercise using Bootstrap, resulting in a responsive page.
-                </div>
-            </div>
-            <hr>
-            <!-- #3 Project -->
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="./assets/images/Responsive-Portfolio-thumb.png" class="mr-3 border"
-                        alt="Responsive-Portfolio">
-                </div>
-                <div class="col-md-7">
-                    <h5 class="mt-0">
-                        <span class="badge badge-success">Complete</span>
-                        Responsive-Portfolio
-                        <a class="d-inline-flex nav-link text-primary"
-                            href="./Responsive-Portfolio/index.html">Link</a>
-                    </h5>
-                    Repeating the Basic-Portfolio exercise using @media CSS to create a responsive page.
-                </div>
-            </div>
-            <hr>
-            <!-- #4 Project -->
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="./assets/images/Word-Guess-Game.png" class="mr-3 border" alt="Project Image">
-                </div>
-                <div class="col-md-7">
-                    <h5 class="mt-0">
-                        <span class="badge badge-primary">New</span>
-                        Word Game - Hangman!
-                        <a class="d-inline-flex nav-link text-primary" href="./Word-Guess-Game/index.html">Link</a>
-                    </h5>
-                    A gothic-horror-themed hangman-style word game incorporating basic javascript and utilizing a single object for the game functionality.
                 </div>
             </div>
             <hr>
