added unit-4 game

--- a/index.html
+++ b/index.html
@@ -51,7 +51,22 @@
     <main>
         <div class="container">
             <h1>Live Repositories</h1>
-            <!-- #4 Project -->
+            <!-- #5 Project -->
+            <div class="row">
+                    <div class="col-md-5">
+                        <img src="./assets/images/ragnarok-game.png" class="mr-3 border" alt="Project Image">
+                    </div>
+                    <div class="col-md-7">
+                        <h5 class="mt-0">
+                            <span class="badge badge-warning">Incomplete</span>
+                            Ragnarok Death Match
+                            <a class="d-inline-flex nav-link text-primary" href="./unit-4-game/index.html">Link</a>
+                        </h5>
+                        An arena-style battle game based on Star Wars RPG game demo.  Game uses a Norse mthology theme with characters from the Ragnarok story of the end of worlds.
+                    </div>
+                </div>
+                <hr>
+                <!-- #4 Project -->
             <div class="row">
                 <div class="col-md-5">
                     <img src="./assets/images/Word-Guess-Game.png" class="mr-3 border" alt="Project Image">
