--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-md-7">
                         <h5 class="mt-0">
-                            <span class="badge badge-warning">Incomplete</span>
+                            <span class="badge badge-primary">New</span>
                             Ragnarok Death Match
                             <a class="d-inline-flex nav-link text-primary" href="./unit-4-game/index.html">Link</a>
                         </h5>
