added Chicago Trivia game

--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
     <main>
         <div class="container">
             <h1>Live Repositories</h1>
+            <!-- #6 Project -->
+            <div class="row">
+                    <div class="col-md-5">
+                        <img src="./assets/images/chicago-trivia-game.png" class="mr-3 border" alt="Project Image">
+                    </div>
+                    <div class="col-md-7">
+                        <h5 class="mt-0">
+                            <span class="badge badge-warning">Incomplete</span>
+                            Chicago Trivia
+                            <a class="d-inline-flex nav-link text-primary" href="./TriviaGame/index.html">Link</a>
+                        </h5>
+                        A Chicago history-themed trivia game.  Includes a count-down timer for answering the question within an allotted time.  Question order and answer order are randomized.
+                    </div>
+                </div>
+                <hr>
             <!-- #5 Project -->
             <div class="row">
                     <div class="col-md-5">
