updated with Trivia Game

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-md-7">
                         <h5 class="mt-0">
-                            <span class="badge badge-warning">Incomplete</span>
+                            <span class="badge badge-primary">New</span>
                             Chicago Trivia
                             <a class="d-inline-flex nav-link text-primary" href="./TriviaGame/index.html">Link</a>
                         </h5>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="col-md-7">
                         <h5 class="mt-0">
-                            <span class="badge badge-primary">New</span>
+                            <span class="badge badge-success">Complete</span>
                             Ragnarok Death Match
                             <a class="d-inline-flex nav-link text-primary" href="./unit-4-game/index.html">Link</a>
                         </h5>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-7">
                     <h5 class="mt-0">
-                        <span class="badge badge-primary">New</span>
+                        <span class="badge badge-success">Complete</span>
                         Word Game - Hangman!
                         <a class="d-inline-flex nav-link text-primary" href="./Word-Guess-Game/index.html">Link</a>
                     </h5>
