added GIFTastic project

--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
     <main>
         <div class="container">
             <h1>Live Repositories</h1>
+            <!-- #7 Project -->
+            <div class="row">
+                    <div class="col-md-5">
+                        <img src="./assets/images/GIFTastic.png" class="mr-3 border" alt="Project Image">
+                    </div>
+                    <div class="col-md-7">
+                        <h5 class="mt-0">
+                            <span class="badge badge-warning">Incomplete</span>
+                            GIFTastic
+                            <a class="d-inline-flex nav-link text-primary" href="./GIFTastic/index.html">Link</a>
+                        </h5>
+                        A fun search for animated GIFs from GIPHY.com using an API call.  Add your own search terms and explore the meme-verse.
+                    </div>
+                </div>
+                <hr>
             <!-- #6 Project -->
             <div class="row">
                     <div class="col-md-5">
