--- a/testSpotify.html
+++ b/testSpotify.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Spotify Login</h1>
-    <button id="#spotifyLogin">Login to Spotify</button>
+    <button id="spotifyLogin">Login to Spotify</button>
 
 
     <script src="https://code.jquery.com/jquery.js"></script>
