testing for Spotify hash

--- a/testSpotify.html
+++ b/testSpotify.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Spotify Login</h1>
     <button id="spotifyLogin">Login to Spotify</button>
+    <span id="linkhere"></span>
 
 
     <script src="https://code.jquery.com/jquery.js"></script>
