--- a/testSpotify.html
+++ b/testSpotify.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Spotify Login</h1>
+    <p>Updated 6/8/2019 at 5:05pm</p>
     <button id="spotifyLogin">Login to Spotify</button>
     <span id="linkhere"></span>
 
