testing Spotify playlist

--- a/testSpotify.html
+++ b/testSpotify.html
@@ -11,9 +11,11 @@
     <p>Updated 6/8/2019 at 5:15pm</p>
     <button id="spotifyLogin">Login to Spotify</button>
     <span id="linkhere"></span>
-
+    <div id="playlists"></div>
+    <div id="planlistTracks"></div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script src="./assets/javascript/lolla-spotify.js"></script>
 </body>
 </html>
