updated Spoitfy test

--- a/testSpotify.html
+++ b/testSpotify.html
@@ -11,8 +11,8 @@
     <p>Updated 6/8/2019 at 9:35pm</p>
     <button id="spotifyLogin">Login to Spotify</button>
     <span id="linkhere"></span>
-    <div id="playlists"></div>
-    <div id="planlistTracks"></div>
+    <div id="artistInfo"></div>
+    <div id="artistTopTracks"></div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="./assets/javascript/lolla-spotify.js"></script>
