added TrainTracker to live repositories

--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
     <main>
         <div class="container">
             <h1>Live Repositories</h1>
+            <!-- #8 Project -->
+            <div class="row">
+                    <div class="col-md-5">
+                        <img src="./assets/images/traintracker.png" class="mr-3 border" alt="Project Image">
+                    </div>
+                    <div class="col-md-7">
+                        <h5 class="mt-0">
+                            <span class="badge badge-warning">Incomplete</span>
+                            GIFTastic
+                            <a class="d-inline-flex nav-link text-primary" href="./TrainTracker/index.html">Link</a>
+                        </h5>
+                        Exploring persistent data, API calls, and authenticatin using Firebase.  TrainTracker shows a schedule of daily train arrivals, updating every minute so you won't be late!  As an administrator (log in using Google authentication) you can add new trains to the schedule or modify select details of existing trains.
+                    </div>
+                </div>
+                <hr>
             <!-- #7 Project -->
             <div class="row">
                     <div class="col-md-5">
