--- a/spot-test.html
+++ b/spot-test.html
@@ -9,8 +9,7 @@
 <body>
     <h1>Spotify API Test</h1>
     <h2>Testing recommendation</h2>
-    <p>Authentication can only (to my knowledge) take place on a published website (like github pages) since it requires a <code>redirect</code>.  It will NOT work properly using Live Server or by just opening the local copy on your computer.</p>
-    <p>So... to demonstrate it, I have placed this file and the included js code (spot.js) at: <a href="">this link</a>.</p>
+    <p>Authentication is tricky since it requires a <code>redirect</code>.  The webpage needs to be "whitelisted" on spotify developer account.  Live Server seems to work for me.</p>
     <h2>Notes</h2>
     <p>Click the button to authenticate; it will return to this page afterward with an <code>access_token</code> that is used in subsequent API calls.</p>
     <button id="spotifyLogin">Login to Spotify</button>
@@ -19,12 +18,15 @@
     <p>This is an artist search example specific to 'Ariana Grande'.  The actual search would be based on the artist selected from the TM list of all (filtered) artists.</p>
     <p>Below is data selected from the JSON data returned from the atrist search end point <code>https://api.spotify.com/v1/search?q=Ariana+Grande&type=artist</code></p>
     <div id="artistInfo"></div>
+    <p>Click on the artist image to get an idea of some links can open directly into a Spotify web player.</p>
 
     <h3>Playlist</h3>
     <div id="artistPlaylists"></div>
+    <p>Once you click the 'Get Playlist' button, you can view the JSON object in the console.</p>
 
     <h3>Top Tracks</h3>
     <div id="artistTopTracks"></div>
+    <p>Once you click the 'Get Top Tracks' button, you can view the JSON object in the console.</p>
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="./assets/javascript/spot.js"></script>
