update to new project name

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col-md-7">
                         <h5 class="mt-0">
                             <span class="badge badge-warning">Incomplete</span>
-                            GIFTastic
+                            TrainTracker
                             <a class="d-inline-flex nav-link text-primary" href="./TrainTracker/index.html">Link</a>
                         </h5>
                         Exploring persistent data, API calls, and authenticatin using Firebase.  TrainTracker shows a schedule of daily train arrivals, updating every minute so you won't be late!  As an administrator (log in using Google authentication) you can add new trains to the schedule or modify select details of existing trains.
