added showUP group project

--- a/index.html
+++ b/index.html
@@ -51,14 +51,31 @@
     <main>
         <div class="container">
             <h1>Live Repositories</h1>
-            <!-- #8 Project -->
+            <!-- #9 Project -->
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="./assets/images/showup_thumb.png" class="mr-3 border" alt="Project Image">
+                </div>
+                <div class="col-md-7">
+                    <h5 class="mt-0">
+                        <span class="badge badge-primary">New</span>
+                        TrainTracker
+                        <a class="d-inline-flex nav-link text-primary" href="./showup/index.html">Link</a>
+                    </h5>
+                    GROUP PROJECT: showUP: Lollapalooza.  With a line-up of more than 100 acts, Lollapalooza is a festival that requires planning: to see the performers you’re there to see, and to open your ears to new music being presented. showUP helps the festival-goer do exactly that. Explore, listen, discover in advance. Make the most of your adventure!
+
+                    Choose artists from the lineup and explore their social media, and listen to Spotify playlists and top tracks to get ready to rock & rave in Grant Park!
+                </div>
+            </div>
+            <hr>
+        <!-- #8 Project -->
             <div class="row">
                     <div class="col-md-5">
                         <img src="./assets/images/traintracker.png" class="mr-3 border" alt="Project Image">
                     </div>
                     <div class="col-md-7">
                         <h5 class="mt-0">
-                            <span class="badge badge-warning">Incomplete</span>
+                            <span class="badge badge-primary">New</span>
                             TrainTracker
                             <a class="d-inline-flex nav-link text-primary" href="./TrainTracker/index.html">Link</a>
                         </h5>
