--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <p><a href='./docs/john_dahle-resume-2019_JUN.pdf' target='_blank'><i class='material-icons indigo-text text-darken-4'>picture_as_pdf</i></a></p>
                         </div>
                         <div class='col s8 m9 l10 left-align'>
-                            <p><a href='./docs/john_dahle-resume-2019_JUN.pdf' target='_blank' class='nav-dark'>My current resume</a></p>                        
+                            <p><a href='./docs/john_dahle-resume-2019_JUN.pdf' target='_blank' class='nav-dark'>My current resume</a></p>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                 <p>Change is hard.  Pursuing change is inspired by a commitment to excellence.</p>
             </div>
             <div class='divider'></div>
-            <div class='section'>nbsp;</div>
+            <div class='section'>&nbsp;</div>
         </div>
 
         <!-- Project Portfolio -->
