added liri project

--- a/index.html
+++ b/index.html
@@ -87,20 +87,18 @@
                     <!-- START portfolio project card -->
                     <div class='card'>
                         <div class='card-image'>
-                            <img src='./assets/images/chicago-trivia-game.png'>
+                            <img src='./assets/images/liri.png'>
                             <!-- <span class='card-title'>Chicago Trivia</span> -->
                         </div>
                         <div class='card-content blue-grey lighten-5'>
-                            <h5 class='project-title'>Chicago Trivia</h5>
-                            <p>Chicago Trivia is a Chicago history-themed trivia game. Includes a count-down timer
-                                for answering the question within an allotted time. Question order and answer order
-                                are randomized.</p>
+                            <h5 class='project-title'>LIRI Bot</h5>
+                            <p>LIRI is a command line node.js application that accepts a command and command argument and returns the requested information.  LIRI searches the Spotify API for songs, the Bands in Town API for concerts, and OMDB API for movies.  LIRI returns information to the console (terminal) formatted for an 80 character screen and to a log file as text (log.txt).  LIRI can also process pre-defined commands from a text file.</p>
                             <h5>Technologies Used</h5>
-                            <p>HTML, CSS, JavaScript, JQuery, Bootstrap</p>
+                            <p>Node.js; node packages: axios, spotify, moment, dotenv; APIs: spotify, OMDB, Bands in Town; JavaScript</p>
                         </div>
                         <div class='section card-footer blue-grey darken-2'>
-                            <a href='https://jmdahle.github.io/TriviaGame/' class='nav-light' target='_blank'>Play the game</a>
-                            <a href='https://github.com/jmdahle/TriviaGame' class='nav-light' target='_blank'>View the code</a>
+                            <a href='https://drive.google.com/file/d/1vQ2Do_Ehb5uhGAL39e_lR7AZehFF6tvi/view' class='nav-light' target='_blank'>Watch the video</a>
+                            <a href='https://github.com/jmdahle/liri' class='nav-light' target='_blank'>View the code</a>
                         </div>
                     </div>
                     <!-- END portfolio project card -->
@@ -138,6 +136,28 @@
                     <!-- START portfolio project card -->
                     <div class='card'>
                         <div class='card-image'>
+                            <img src='./assets/images/chicago-trivia-game.png'>
+                            <!-- <span class='card-title'>Chicago Trivia</span> -->
+                        </div>
+                        <div class='card-content blue-grey lighten-5'>
+                            <h5 class='project-title'>Chicago Trivia</h5>
+                            <p>Chicago Trivia is a Chicago history-themed trivia game. Includes a count-down timer
+                                for answering the question within an allotted time. Question order and answer order
+                                are randomized.</p>
+                            <h5>Technologies Used</h5>
+                            <p>HTML, CSS, JavaScript, JQuery, Bootstrap</p>
+                        </div>
+                        <div class='section card-footer blue-grey darken-2'>
+                            <a href='https://jmdahle.github.io/TriviaGame/' class='nav-light' target='_blank'>Play the game</a>
+                            <a href='https://github.com/jmdahle/TriviaGame' class='nav-light' target='_blank'>View the code</a>
+                        </div>
+                    </div>
+                    <!-- END portfolio project card -->
+                </div>
+                <div class='col s12 m12 l6'>
+                    <!-- START portfolio project card -->
+                    <div class='card'>
+                        <div class='card-image'>
                             <img src='./assets/images/deathmatch-ragnarok.png'>
                             <!-- <span class='card-title'>Death Match: Ragnarok</span> -->
                         </div>
@@ -155,6 +175,9 @@
                     </div>
                     <!-- END portfolio project card -->
                 </div>
+            </div>
+            <!-- Third set of projects -->
+            <div class='row'>
                 <div class='col s12 m12 l6'>
                     <!-- START portfolio project card -->
                     <div class='card'>
@@ -174,6 +197,10 @@
                             <a href='https://github.com/jmdahle/Word-Guess-Game' class='nav-light' target='_blank'>View the code</a>
                         </div>
                     </div>
+                    <!-- END portfolio project card -->
+                </div>
+                <div class='col s12 m12 l6'>
+                    <!-- START portfolio project card -->
                     <!-- END portfolio project card -->
                 </div>
             </div>
